<resources>
    <string name="app_name">FindMeTutor</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_number">Contact Number</string>
    <string name="hint_securityQ">Security Question</string>
    <string name="hint_answer">Answer</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="btn_log_in">Log In</string>
    <string name="btn_register">Register</string>
    <string name="btn_request">Request</string>

    <string name="err_msg_name">Enter your Full name</string>
    <string name="err_msg_Fname">Enter your First name</string>
    <string name="err_msg_Lname">Enter your Last name</string>
    <string name="err_msg_email">Enter valid Wits student email address</string>
    <string name="err_msg_number">Enter valid contact number</string>
    <string name="err_msg_password">Enter valid password (Min 7 Characters)</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Settings</string>
    <string name="nav_item_logout">Log Out</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_Logout">Log Out</string>
    <string name="title_Settings">Settings</string>
    <string name="stdNum">Student Number</string>

    <string-array name="android_dropdown_arrays">
        <item>Choose subject</item>
        <item>Basic Analysis</item>
        <item>Multivariable Calculus</item>
        <item>Applied Mathematics</item>
        <item>Machine Learning</item>
        <item>Parallel Computing</item>
        <item>Software Design</item>
        <item>Complex Analysis</item>
    </string-array>
    <string name="title_activity_tutor__home">tutor_Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
