<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <ImageButton
            android:background="@null"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:id="@+id/studentDp"
            android:gravity="center"
            android:src="@drawable/ic_profile_greenp"
            android:clickable="true"
            android:onClick="DisplayPicture"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="0dp" />


            <EditText
                android:id="@+id/input_Firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:editable="false"/>


            <EditText
                android:id="@+id/input_Lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:editable="false"/>


            <EditText
                android:id="@+id/stdNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stdNum"
                android:editable="false"/>

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:editable="false"/>

            <EditText
                android:id="@+id/input_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_number"
                android:nestedScrollingEnabled="true"
                android:numeric="integer"
                android:maxLines="1"
                android:digits="0123456789"
                android:phoneNumber="true"
                android:singleLine="true"
                android:inputType="phone"
                android:maxLength="10"
                android:editable="false"/>

            <EditText
                android:id="@+id/input_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Current Balance"
                android:editable="false"/>

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:editable="false" />

            <EditText
                android:id="@+id/input_passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Confirm Password"
                android:visibility="gone"
                 />

        <Button android:id="@+id/btn_addFunds"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Add Funds"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>




    </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>